--- a/products.html
+++ b/products.html
@@ -18,6 +18,7 @@
             <div class="text-2xl font-bold">Zex Communications</div>
             <div class="hidden md:flex space-x-6">
                 <a href="index.html" class="hover:text-blue-300">Home</a>
+                <a href="about.html" class="hover:text-blue-300">About</a>
                 <a href="products.html" class="hover:text-blue-300">Products</a>
                 <a href="services.html" class="hover:text-blue-300">Services</a>
                 <a href="contact.html" class="hover:text-blue-300">Contact</a>
