--- a/product-details.html
+++ b/product-details.html
@@ -14,6 +14,7 @@
             <div class="text-2xl font-bold">SecureTech Solutions</div>
             <div class="hidden md:flex space-x-6">
                 <a href="index.html" class="hover:text-blue-300">Home</a>
+                <a href="about.html" class="hover:text-blue-300">About</a>
                 <a href="products.html" class="hover:text-blue-300">Products</a>
                 <a href="services.html" class="hover:text-blue-300">Services</a>
                 <a href="contact.html" class="hover:text-blue-300">Contact</a>
