--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
             <div class="text-2xl font-bold">Zex Communications</div>
             <div class="hidden md:flex space-x-6">
                 <a href="index.html" class="hover:text-blue-300">Home</a>
+                <a href="about.html" class="hover:text-blue-300">About</a>
                 <a href="products.html" class="hover:text-blue-300">Products</a>
                 <a href="services.html" class="hover:text-blue-300">Services</a>
                 <a href="contact.html" class="hover:text-blue-300">Contact</a>
@@ -95,6 +96,7 @@
                     <h3 class="text-xl font-bold mb-4">Quick Links</h3>
                     <ul class="space-y-2">
                         <li><a href="index.html" class="hover:text-blue-300">Home</a></li>
+                        <li><a href="about.html" class="hover:text-blue-300">About</a></li>
                         <li><a href="products.html" class="hover:text-blue-300">Products</a></li>
                         <li><a href="services.html" class="hover:text-blue-300">Services</a></li>
                         <li><a href="contact.html" class="hover:text-blue-300">Contact</a></li>
