home changes on 19th Feb 25

--- a/about.html
+++ b/about.html
@@ -116,51 +116,7 @@
             </div>
         </div>
     </section>
-
-    <!-- Team Section -->
-    <section class="py-16">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-12">Our Leadership Team</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <!-- Team Member 1 -->
-                <div class="text-center" data-aos="fade-up">
-                    <div class="relative mb-4 inline-block">
-                        <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="CEO" class="w-48 h-48 rounded-full mx-auto">
-                        <div class="absolute bottom-0 right-0 bg-blue-900 text-white p-2 rounded-full">
-                            <i class="fab fa-linkedin"></i>
-                        </div>
-                    </div>
-                    <h3 class="text-xl font-bold">John Doe</h3>
-                    <p class="text-gray-600">CEO & Founder</p>
-                </div>
-
-                <!-- Team Member 2 -->
-                <div class="text-center" data-aos="fade-up" data-aos-delay="100">
-                    <div class="relative mb-4 inline-block">
-                        <img src="https://randomuser.me/api/portraits/women/1.jpg" alt="CTO" class="w-48 h-48 rounded-full mx-auto">
-                        <div class="absolute bottom-0 right-0 bg-blue-900 text-white p-2 rounded-full">
-                            <i class="fab fa-linkedin"></i>
-                        </div>
-                    </div>
-                    <h3 class="text-xl font-bold">Sarah Johnson</h3>
-                    <p class="text-gray-600">Chief Technology Officer</p>
-                </div>
-
-                <!-- Team Member 3 -->
-                <div class="text-center" data-aos="fade-up" data-aos-delay="200">
-                    <div class="relative mb-4 inline-block">
-                        <img src="https://randomuser.me/api/portraits/men/2.jpg" alt="COO" class="w-48 h-48 rounded-full mx-auto">
-                        <div class="absolute bottom-0 right-0 bg-blue-900 text-white p-2 rounded-full">
-                            <i class="fab fa-linkedin"></i>
-                        </div>
-                    </div>
-                    <h3 class="text-xl font-bold">Michael Chen</h3>
-                    <p class="text-gray-600">Chief Operations Officer</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
+ 
     <!-- Values Section -->
     <section class="py-16 bg-gray-100">
         <div class="container mx-auto px-4">
@@ -168,34 +124,34 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div class="bg-white p-6 rounded-lg shadow-lg text-center" data-aos="zoom-in">
                     <div class="w-16 h-16 bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <i class="fas fa-shield-alt text-white text-2xl"></i>
+                        <i class="fa-solid fa-award text-white text-2xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-2">Integrity</h3>
-                    <p class="text-gray-600">We maintain the highest standards of honesty and ethical behavior.</p>
+                    <h3 class="text-xl font-bold mb-2">Excellence</h3>
+                    <p class="text-gray-600">We are passionate about delivering results.</p>
                 </div>
 
                 <div class="bg-white p-6 rounded-lg shadow-lg text-center" data-aos="zoom-in" data-aos-delay="100">
                     <div class="w-16 h-16 bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-lightbulb text-white text-2xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-2">Innovation</h3>
-                    <p class="text-gray-600">We continuously seek new ways to improve and advance technology.</p>
+                    <h3 class="text-xl font-bold mb-2">Respect</h3>
+                    <p class="text-gray-600">We believe that people are our valuable asset.</p>
                 </div>
 
                 <div class="bg-white p-6 rounded-lg shadow-lg text-center" data-aos="zoom-in" data-aos-delay="200">
                     <div class="w-16 h-16 bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <i class="fas fa-users text-white text-2xl"></i>
+                      <i class="fa-solid fa-shield text-white text-2xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-2">Collaboration</h3>
-                    <p class="text-gray-600">We work together with our clients to achieve shared success.</p>
+                    <h3 class="text-xl font-bold mb-2">Integrity</h3>
+                    <p class="text-gray-600">We apply the highest ethical, moral and proffessional standards in our conduct.</p>
                 </div>
 
                 <div class="bg-white p-6 rounded-lg shadow-lg text-center" data-aos="zoom-in" data-aos-delay="300">
                     <div class="w-16 h-16 bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
                         <i class="fas fa-star text-white text-2xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-2">Excellence</h3>
-                    <p class="text-gray-600">We strive for excellence in everything we do.</p>
+                    <h3 class="text-xl font-bold mb-2">Innovation</h3>
+                    <p class="text-gray-600">We costantly look for ways to do things better.</p>
                 </div>
             </div>
         </div>
