--- a/contact.html
+++ b/contact.html
@@ -26,59 +26,115 @@
     </nav>
 
     <!-- Contact Header -->
-    <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white py-12">
-        <div class="container mx-auto text-center px-4">
-            <h1 class="text-4xl font-bold mb-4">Contact Us</h1>
-            <p class="text-xl">Get in touch with our team</p>
+    <header class="relative bg-blue-900 text-white py-24">
+        <div class="absolute inset-0">
+            <img src="https://images.unsplash.com/photo-1587560699334-bea93391dcef?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D`" alt="Contact" class="w-full h-full object-cover opacity-20">
+        </div>
+        <div class="relative container mx-auto text-center px-4">
+            <h1 class="text-4xl md:text-6xl font-bold mb-4">Contact Us</h1>
+            <p class="text-xl opacity-90">We'd love to hear from you</p>
         </div>
     </header>
 
     <!-- Contact Form Section -->
-    <section class="py-16">
+    <section class="py-20 bg-white">
         <div class="container mx-auto px-4">
-            <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div>
-                    <h2 class="text-2xl font-bold mb-6">Send Us a Message</h2>
-                    <form class="space-y-6">
-                        <div>
-                            <label for="name" class="block text-gray-700 mb-2">Name</label>
-                            <input type="text" id="name" name="name" placeholder="Your name" title="Please enter your name" 
-                                class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-900">
+            <div class="max-w-6xl mx-auto">
+                <!-- Contact Cards -->
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-16">
+                    <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300 text-center">
+                        <div class="w-16 h-16 bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
+                            <i class="fas fa-phone text-white text-2xl"></i>
                         </div>
-                        <div>
-                            <label for="email" class="block text-gray-700 mb-2">Email</label>
-                            <input type="email" id="email" name="email" placeholder="Your email" title="Please enter your email"
-                                class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-900">
+                        <h3 class="text-xl font-semibold mb-2">Phone</h3>
+                        <p class="text-gray-600">(265) 1546-7890</p>
+                    </div>
+                    <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300 text-center">
+                        <div class="w-16 h-16 bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
+                            <i class="fas fa-envelope text-white text-2xl"></i>
                         </div>
-                        <div>
-                            <label for="message" class="block text-gray-700 mb-2">Message</label>
-                            <textarea id="message" name="message" placeholder="Your message" title="Please enter your message"
-                                class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-900" 
-                                rows="4"></textarea>
+                        <h3 class="text-xl font-semibold mb-2">Email</h3>
+                        <p class="text-gray-600">info@zexcommunications.com</p>
+                    </div>
+                    <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300 text-center">
+                        <div class="w-16 h-16 bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
+                            <i class="fas fa-location-dot text-white text-2xl"></i>
                         </div>
-                        <button type="submit" class="bg-blue-900 text-white px-8 py-3 rounded-lg hover:bg-blue-800 transition duration-300">
-                            Send Message
-                        </button>
-                    </form>
+                        <h3 class="text-xl font-semibold mb-2">Office</h3>
+                        <p class="text-gray-600">123 Security Street, Business District</p>
+                    </div>
                 </div>
-                <div>
-                    <h2 class="text-2xl font-bold mb-6">Contact Information</h2>
-                    <div class="space-y-4">
-                        <div class="flex items-start">
-                            <i class="fas fa-map-marker-alt text-blue-900 mt-1 mr-4"></i>
-                            <p>123 Security Street<br>Business District<br>City, Country</p>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+                    <!-- Contact Form -->
+                    <div class="bg-white p-8 rounded-xl shadow-lg">
+                        <h2 class="text-3xl font-bold mb-8">Send Us a Message</h2>
+                        <form class="space-y-6">
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                                <div>
+                                    <label for="name" class="block text-gray-700 mb-2 font-medium">Name</label>
+                                    <input type="text" id="name" name="name" 
+                                        class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-900 focus:border-transparent transition"
+                                        placeholder="John Doe">
+                                </div>
+                                <div>
+                                    <label for="email" class="block text-gray-700 mb-2 font-medium">Email</label>
+                                    <input type="email" id="email" name="email" 
+                                        class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-900 focus:border-transparent transition"
+                                        placeholder="john@example.com">
+                                </div>
+                            </div>
+                            <div>
+                                <label for="subject" class="block text-gray-700 mb-2 font-medium">Subject</label>
+                                <input type="text" id="subject" name="subject" 
+                                    class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-900 focus:border-transparent transition"
+                                    placeholder="How can we help?">
+                            </div>
+                            <div>
+                                <label for="message" class="block text-gray-700 mb-2 font-medium">Message</label>
+                                <textarea id="message" name="message" rows="5"
+                                    class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-900 focus:border-transparent transition"
+                                    placeholder="Your message here..."></textarea>
+                            </div>
+                            <button type="submit" 
+                                class="w-full bg-blue-900 text-white px-8 py-4 rounded-lg hover:bg-blue-800 transition duration-300 font-medium text-lg">
+                                Send Message
+                            </button>
+                        </form>
+                    </div>
+
+                    <!-- Map and Hours -->
+                    <div class="space-y-8">
+                        <!-- Google Map -->
+                        <div class="h-[300px] rounded-xl overflow-hidden shadow-lg">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15230.446665294393!2d35.00151533023916!3d-15.786666590561391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x18d844ee1167b219%3A0x5024c1b5c0a915af!2sBlantyre%20CBD%2C%20Blantyre%2C%20Malawi!5e0!3m2!1sen!2s!4v1709834851044!5m2!1sen!2s"
+                                width="100%"
+                                height="100%"
+                                style="border:0;"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
                         </div>
-                        <div class="flex items-start">
-                            <i class="fas fa-phone text-blue-900 mt-1 mr-4"></i>
-                            <p>(123) 456-7890</p>
-                        </div>
-                        <div class="flex items-start">
-                            <i class="fas fa-envelope text-blue-900 mt-1 mr-4"></i>
-                            <p>info@zexcomm.com</p>
-                        </div>
-                        <div class="flex items-start">
-                            <i class="fas fa-clock text-blue-900 mt-1 mr-4"></i>
-                            <p>Monday - Friday: 9:00 AM - 6:00 PM<br>Saturday: 10:00 AM - 4:00 PM</p>
+
+                        <!-- Business Hours -->
+                        <div class="bg-white p-8 rounded-xl shadow-lg">
+                            <h3 class="text-2xl font-bold mb-6">Business Hours</h3>
+                            <div class="space-y-4">
+                                <div class="flex justify-between items-center">
+                                    <span class="text-gray-600">Monday - Friday</span>
+                                    <span class="font-medium">9:00 AM - 6:00 PM</span>
+                                </div>
+                                <div class="flex justify-between items-center">
+                                    <span class="text-gray-600">Saturday</span>
+                                    <span class="font-medium">10:00 AM - 4:00 PM</span>
+                                </div>
+                                <div class="flex justify-between items-center">
+                                    <span class="text-gray-600">Sunday</span>
+                                    <span class="font-medium">Closed</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
