--- a/products.html
+++ b/products.html
@@ -30,10 +30,13 @@
     </nav>
 
     <!-- Products Header -->
-    <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white py-12">
-        <div class="container mx-auto text-center px-4">
-            <h1 class="text-4xl font-bold mb-4">Our Products</h1>
-            <p class="text-xl">Discover our range of security and technology solutions</p>
+    <header class="relative bg-blue-900 text-white py-24">
+        <div class="absolute inset-0">
+            <img src="https://images.unsplash.com/photo-1581092921461-eab62e97a780?q=80" alt="Products" class="w-full h-full object-cover opacity-20">
+        </div>
+        <div class="relative container mx-auto text-center px-4">
+            <h1 class="text-4xl md:text-6xl font-bold mb-4">Our Products</h1>
+            <p class="text-xl opacity-90">Cutting-edge solutions for modern businesses</p>
         </div>
     </header>
 
@@ -70,9 +73,9 @@
             <div class="grid grid-cols-1 my-5 md:grid-cols-2 gap-8">
                 <!-- Product Card 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden" data-aos="fade-up">
-                    <img src="https://as2.ftcdn.net/jpg/06/19/61/23/1000_F_619612349_T4rtVXeBxVwhNES7ipDicLHUv1cyB1Df.jpg" alt="Surveillance Drone" class="w-full h-64 object-cover">
+                    <img src="https://5.imimg.com/data5/SELLER/Default/2023/5/309540281/TP/AU/ZR/70991832/solar-products.png" alt="Surveillance Drone" class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Solar Installation System</h3>
+                        <h3 class="text-xl font-bold mb-2">Solar System Equipment</h3>
                         <p class="text-gray-600 mb-4">Autonomous surveillance drone with automated patrolling, thermal imaging, and AI-powered threat detection. Perfect for large property surveillance.</p>
                         <a href="product-details.html?id=5" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 inline-block">View Details</a>
                     </div>
